--- a/html/index.html
+++ b/html/index.html
@@ -2,9 +2,40 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Landing</title>
+    <link rel="stylesheet" type="text/css" href="../css/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Oswald" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   </head>
   <body>
 
+    <!-- Photograph -->
+    <div class="personal_photo">
+
+      <!-- NavBar -->
+        <nav class="navbar hover-effect">
+
+          <a href="#"><li class="active">home</li></a>
+          <a href="css/about_me.html"><li>about me</li></a>
+          <a href="css/resume.html"><li>resume</li></a>
+          <a href="css/projects.html"><li>projects</li></a>
+
+          <div class="icons hover-effect">
+            <a href="https://github.com/JSpeed8th" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
+            <a href="https://www.facebook.com/jordanspeed8" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a>
+            <a href="https://www.linkedin.com/in/jordan-speed/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
+            <a href="https://www.instagram.com/art_angel_ichi/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
+          </div>
+        </nav>
+
+      <!-- Screen Text -->
+      <div class="name_occupation">
+        <h1>Jordan Speed</h1>
+        <h2>//web developer</h2>
+      </div>
+
+    </div>
+
+    <script src="https://unpkg.com/ionicons@4.4.2/dist/ionicons.js"></script>
   </body>
 </html>
