Completed about me draft.

--- a/html/index.html
+++ b/html/index.html
@@ -16,9 +16,9 @@
         <nav class="navbar hover-effect">
 
           <a href="#"><li class="active">home</li></a>
-          <a href="css/about_me.html"><li>about me</li></a>
-          <a href="css/resume.html"><li>resume</li></a>
-          <a href="css/projects.html"><li>projects</li></a>
+          <a href="about_me.html"><li>about me</li></a>
+          <a href="resume.html"><li>resume</li></a>
+          <a href="projects.html"><li>projects</li></a>
 
           <div class="icons hover-effect">
             <a href="https://github.com/JSpeed8th" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
@@ -31,7 +31,7 @@
       <!-- Screen Text -->
       <div class="name_occupation">
         <h1>Jordan Speed</h1>
-        <h2>//web developer</h2>
+        <h2>web developer</h2>
       </div>
 
     </div>
