Completed contact.html. Working on content.css.

--- a/html/contact.html
+++ b/html/contact.html
@@ -2,22 +2,22 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Projects</title>
-    <link rel="stylesheet" type="text/css" href="../css/projects.css">
+    <title>contact</title>
     <link rel="stylesheet" type="text/css" href="../css/index.css">
+    <link rel="stylesheet" type="text/css" href="../css/contact.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   </head>
 
   <body>
-    <div class="wrapper-photo3">
+    <div class="wrapper-photo4">
       <!-- NavBar -->
       <nav class="navbar hover-effect">
         <!-- Links -->
         <a href="index.html"><li>home</li></a>
         <a href="about_me.html"><li>about me</li></a>
-        <a href="projects.html"><li class="active">projects</li></a>
-        <a href="contact.html"><li>contact</li></a>
+        <a href="projects.html"><li>projects</li></a>
+        <a href="contact.html"><li class="active">contact</li></a>
         <!-- Icons -->
         <div class="icons hover-effect">
           <a href="https://github.com/JSpeed8th" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
@@ -26,12 +26,18 @@
           <a href="https://www.instagram.com/art_angel_ichi/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
         </div>
       </nav>
+      <!-- Form -->
+      <div class="text-wrapper">
+        <form class="" action="index.html" method="post">
+          <textarea name="message" rows="8" cols="83" placeholder="Ask me anything! Don't forget to include your email!"></textarea>
 
-      <div class="message">
-        <h1>coming soon</h1>
+          <input type="email" name="email" placeholder="Input Email" required>
+
+          <button type="submit" name="button">Do It To It!</button>
+        </form>
       </div>
-
     </div>
-    <script src="https://unpkg.com/ionicons@4.4.2/dist/ionicons.js"></script>
+      <!-- Icons Link -->
+      <script src="https://unpkg.com/ionicons@4.4.2/dist/ionicons.js"></script>
   </body>
 </html>
