--- a/html/contact.html
+++ b/html/contact.html
@@ -31,9 +31,11 @@
         <form class="" action="index.html" method="post">
           <textarea name="message" rows="8" cols="83" placeholder="Ask me anything! Don't forget to include your email!"></textarea>
 
+          <!-- <input type="textarea" name="message" value="" placeholder="Ask me anything! Don't forget to include your email!"> -->
+
           <input type="email" name="email" placeholder="Input Email" required>
 
-          <button type="submit" name="button">Do It To It!</button>
+          <button type="submit" name="button">Submit!</button>
         </form>
       </div>
     </div>
