--- a/html/about_me.html
+++ b/html/about_me.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <div class="wrapper-photo2">
+    <div class="wallpaper2">
       <!-- NavBar -->
       <nav class="navbar hover-effect">
         <!-- Links -->
