--- a/html/contact.html
+++ b/html/contact.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <div class="wrapper-photo4">
+    <div class="wallpaper4">
       <!-- NavBar -->
       <nav class="navbar hover-effect">
         <!-- Links -->
@@ -30,8 +30,6 @@
       <div class="text-wrapper">
         <form class="" action="index.html" method="post">
           <textarea name="message" rows="8" cols="83" placeholder="Ask me anything! Don't forget to include your email!"></textarea>
-
-          <!-- <input type="textarea" name="message" value="" placeholder="Ask me anything! Don't forget to include your email!"> -->
 
           <input type="email" name="email" placeholder="Input Email" required>
 
