--- a/html/projects.html
+++ b/html/projects.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <div class="wrapper-photo3">
+    <div class="wallpaper3">
       <!-- NavBar -->
       <nav class="navbar hover-effect">
         <!-- Links -->
