--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div class="wrapper-photo">
+    <div class="wallpaper">
       <!-- NavBar -->
       <nav class="navbar hover-effect">
         <!-- Links -->
