Added normalize.css in order to reset stylesheets across different browsers. PROJECT COMPLETE.

--- a/html/projects.html
+++ b/html/projects.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" type="text/css" href="../css/projects.css">
     <link rel="stylesheet" type="text/css" href="../css/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Normalize.css...A modern, HTML5-ready alternative to CSS resets -->
+    <link rel="stylesheet" type="text/css" href="/css/normalize.css">
+    <!-- Font Link -->
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   </head>
 
